--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /****************************************************
-                  Header Styling
+        Header Styling for shared content
  ****************************************************/
 .header {
   position: fixed;
