--- a/styles.css
+++ b/styles.css
@@ -1024,10 +1024,11 @@ html {
   grid-template-rows: repeat(5, auto);
   gap: 30px;
   animation: fadeIn 0.3s;
+  color: rgb(230, 230, 230);
 }
 
 .quiz-question-card {
-  background-color: rgb(228, 228, 228);
+  background-color: #44576d;
   width: 500px;
   border-radius: 20px;
   padding: 20px;
@@ -1064,7 +1065,7 @@ html {
 }
 
 .multiple-choice-options label:hover {
-  background-color: rgb(192, 192, 192);
+  background-color: #364557;
 }
 
 .multiple-choice-options input[type="radio"] {
@@ -1072,7 +1073,7 @@ html {
 }
 
 .multiple-choice-options input[type="radio"]:checked + label {
-  background-color: rgb(153, 153, 153);
+  background-color: #2b3846;
 }
 
 .question {
@@ -1081,7 +1082,7 @@ html {
 }
 
 .quiz-submit-button {
-  background-color: rgb(177, 247, 177);
+  background-color: rgb(104, 223, 104);
   font-size: 30px;
   width: 150px;
   height: 45px;
@@ -1093,7 +1094,7 @@ html {
 }
 
 .quiz-submit-button:hover {
-  background-color: rgb(100, 194, 100);
+  background-color: rgb(85, 182, 85);
 }
 
 .submit-button-go-to-part {
@@ -1115,9 +1116,10 @@ html {
   right: 20px;
   top: 175px;
   text-align: center;
-  background-color: rgb(238, 251, 255);
+  background-color: #44576d;
   border-radius: 10px;
   padding: 15px;
+  color: white;
 }
 
 th {
