changed colour of ai response box for home page

--- a/styles.css
+++ b/styles.css
@@ -921,7 +921,7 @@ html {
 }
 
 .response-box {
-  background-color: #dfebf6;
+  background-color: #edf6ff;
   color: black;
   width: 90%;
   height: 70%;
