added button icons

--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,10 @@ body {
 #top-of-page {
   margin-left: 50px;
 }
-
+.icon{
+  width: 30px;
+  height: 30px;
+}
 /****************************************************
                   Main Button Styling
  ****************************************************/
