--- a/styles.css
+++ b/styles.css
@@ -99,9 +99,13 @@ body {
 #top-of-page {
   margin-left: 50px;
 }
-.icon{
+.icon {
   width: 30px;
   height: 30px;
+}
+
+.help-and-documentation-button {
+  margin-top: 16px;
 }
 /****************************************************
                   Main Button Styling
@@ -876,7 +880,7 @@ html {
   font-weight: bold;
   border-radius: 50%;
   left: 10px;
-  padding:0px;
+  padding: 0px;
 }
 .todo-input-box {
   position: relative;
